# rhythmic-segments

./: .buildinfo  .gitignore  Basic Usage.html  Metadata.html  Operations.html  Plotting.html  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: Basic Usage.doctree  Metadata.doctree  Operations.doctree  Plotting.doctree  api.doctree  environment.pickle  index.doctree
.doctrees/autoapi/rhythmic_segments/: index.doctree
.doctrees/autoapi/rhythmic_segments/helpers/: index.doctree
.doctrees/autoapi/rhythmic_segments/meta/: index.doctree
.doctrees/autoapi/rhythmic_segments/patterns/: index.doctree
.doctrees/autoapi/rhythmic_segments/segments/: index.doctree
.github/workflows/: ci.yaml  docs.yaml  publish.yaml
_sources/: Basic Usage.ipynb.txt  Metadata.ipynb.txt  Plotting.ipynb.txt  index.md.txt
_sources/autoapi/rhythmic_segments/: index.rst.txt
_sources/autoapi/rhythmic_segments/helpers/: index.rst.txt
_sources/autoapi/rhythmic_segments/meta/: index.rst.txt
_static/: custom.css
autoapi/rhythmic_segments/: index.html
autoapi/rhythmic_segments/helpers/: index.html
autoapi/rhythmic_segments/meta/: index.html
autoapi/rhythmic_segments/patterns/: index.html
autoapi/rhythmic_segments/segments/: index.html
docs/source/: Basic Usage.ipynb  Operations.ipynb  Plotting.ipynb  api.md  conf.py  index.md
docs/source/api/: index.md
docs/source/tutorials/: Getting started.ipynb  index.md
src/rhythmic_segments/: meta.py  segments.py
tests/: __init__.py  conftest.py  test_meta.py  test_patterns.py  test_segments.py  test_segments_core.py  test_segments_from_events.py  test_segments_from_intervals.py  test_segments_utils.py  test_utils.py
(+2 files in other folders)
